fix bottom cards background and add blur to make text more readable

--- a/css/tailwind.scss
+++ b/css/tailwind.scss
@@ -7,19 +7,54 @@
     @apply inline-block pb-1 pt-2 pl-2 pr-2 mr-2 bg-primary hover:ring-white rounded ring-2 ring-black text-white;
   }
 
-  .bg-project {
+  .bg-project::before {
+    content: "";
+    position: absolute;
+    top:0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+  
+    display: block;
     background-image: url("/img/project-bg.png");
-    background-size: 70vw;
-    background-position: -30vw;
-    background-repeat: no-repeat;
+    background-size:cover;
+    width: 100%;
+    height: 100%;
+  
+    filter: blur(2px);
   }
-  .bg-alumni {
+
+
+  .bg-project {
+    /* this is needed or the background will be offset by a few pixels at the top */
+    overflow: auto;
+    position: relative;
+  }
+
+
+  .bg-alumni:before {
+    content: "";
+    position: absolute;
+    top:0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+  
+    display: block;
     background-image: url("/img/alumni-bg.jpg");
-    background-size: 70vw;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-size:cover;
+    width: 100%;
+    height: 100%;
+  
+    filter: blur(2px) brightness(40%);
   }
   
+  .bg-alumni {
+    /* this is needed or the background will be offset by a few pixels at the top */
+    overflow: auto;
+    position: relative;
+  }
+
   .social-icons .icon-link:hover {
     color: #fe6431;
   }
